<resources>
    <string name="app_name">Flashcards</string>
    <string name="DeckMetadataButtonText">Edit Deck Information</string>
    <string name="DeckNameLabel">Edit Deck Name</string>
    <string name="ProfessorNameLabel">Edit Professor Name</string>
    <string name="AddProfessorLabel">+ Add Professor</string>
    <string name="CategoryNameLabel">Edit Category Name</string>
    <string name="AddCategoryLabel">+ Add Category</string>
    <string name="SaveString">Save</string>
    <string name="CourseNameLabel">Edit Course Name</string>
    <string name="SchoolNameLabel">Edit School Name</string>
    <string name="CourseString">Course Name</string>
    <string name="SchoolString">School Name</string>
    <string name="CategoryString">Category Name</string>
    <string name="ProfessorString">Professor Name</string>
    <string name="NameString">Deck Name</string>
    <string name="AddFlashcardLabel">+ Add Flashcard</string>
    <string name="TermString">Term</string>
    <string name="DefinitionString">Definition</string>
    <string name="Deck1String">Deck 1</string>
    <string name="Deck2String">Deck 2</string>
    <string name="AddDeckString">+ Add Deck</string>
    <string name="BackButton">Back</string>
    <string name="Username">Guest\'s Decks</string>
    <string name="UserWelcome">Welcome to Our App!</string>
    <string name="MyDecksString">My Decks</string>
    <string name="NearbyDecks">Nearby Decks</string>
    <string name="SearchDecksString">Search Decks</string>
    <string name="DeckNameString">Deck Name</string>
    <string name="SearchString">Search</string>
    <string name="SearchResultsString">Search Results</string>
    <string name="title_activity_login">Sign In</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="new_account_prompt">Need an Account?</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="account_exists_prompt">Already have an Account?</string>
    <string name="login_prompt"><u>Sign In</u></string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="retrieve_password">Retrieve Password</string>
    <string name="password_retrieval_confirmation">An email containing the password you used was sent to the given email account</string>
    <string name="prof_deck_home_prompt">Cycle Professor Names</string>
    <string name="category_deck_home_prompt">Cycle Category Names</string>
    <string name="title_activity_maps">Map</string>
    <string name="study_deck_prompt">Study Deck</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_name">Name</string>
    <string name="completed_deck_key">DeckComplete</string>
    <string name="deck_name_key">DeckName</string>
    <string name="is_new_deck_key">IsNewDeck</string>
    <string name="delete">Delete</string>
    <string name="answer_with_term_or_def">Answer with Term or Definition</string>
    <string name="default_str">Default</string>
    <string name="check_answer">Check Answer</string>
    <string name="shuffle_deck">Shuffle Deck</string>
    <string name="enter_term">Enter Term</string>
    <string name="enter_def">Enter Definition</string>
    <string name="study_flashcards">Study Flashcards</string>
    <string name="ratings_label">Rate this Deck</string>
    <string name="post_rating">Post Rating</string>
    <string name="download_deck">Download Deck</string>
    <string name="sign_out_prompt">Sign Out</string>
    <string name="is_firebase_deck_key">IsFirebaseDeck</string>
    <string name="post_deck_button">Post Deck</string>
    <string name="marked_cards">MarkedCards</string>
    <string name="study_marked_cards">Study Marked Cards</string>
    <string name="answer_marked_cards">Answer with Only Marked Cards</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="change_password">Reset Password</string>
    <string name="active_number_key">Active Number</string>
</resources>
